name:           flp-basic
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
license:        GPL-3
description:    Projekt na FLP

executable flp-basic
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   CommonModule,
                   VariablesModule,
                   InterpreterModule,
                   ParserModule
  extensions:      GeneralizedNewtypeDeriving

library 
  build-depends:   
                   base >= 4,
                   parsec
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Main
  other-modules:   
                   CommonModule,
                   InterpreterModule,
                   ParserModule,
                   VariablesModule

